# eggo

./: .gitignore  1-batchRendering.txt  2-instanceRendering.txt  CMakeLists.txt  CMakePresets.json  README.md  android-build.bat
application/: CMakeLists.txt
application/resource/shaders/: player.frag  player.vert
application/src/: main.cpp
eggo/: CMakeLists.txt  conanfile.txt
eggo/include/: Application.h  Buffer.h  DataBatcher.h  Polygon.h  ProgramShader.h  Renderer.h  Shader.h  VAO.h  eggo.h
eggo/include/core/: Application.h  MainLoop.h
eggo/include/core/buffer/: Buffer.h  VertexBuffer.h
eggo/include/core/window/: MainWindow.h  MainWindowSpecs.h  Window.h
eggo/include/g_unit/: Batch.h  Controllable.h  Primitive.h  Renderer.h
eggo/include/g_unit/player/: Player.h
eggo/include/handlers/: File.h  Input.h
eggo/include/macros/: build_macro.h
eggo/include/math/: math.h
eggo/include/util/: Global.h  Utils.h
eggo/include/util/namespaces/: G.h  Input.h
eggo/include/window/: MainWindowSpecs.h  Window.h
eggo/src/: Application.cpp  Buffer.cpp  DataBatcher.cpp  Polygon.cpp  ProgramShader.cpp  Renderer.cpp  Shader.cpp  VAO.cpp  eggo.cpp  lib.cpp
eggo/src/core/: Application.cpp  Application.h  MainLoop.cpp  MainLoop.h
eggo/src/core/buffer/: Buffer.cpp  Buffer.h  VertexBuffer.cpp  VertexBuffer.h
eggo/src/core/window/: MainWindow.cpp  MainWindow.h  MainWindowSpecs.cpp  MainWindowSpecs.h  Window.cpp  Window.h
eggo/src/g_unit/: Batch.cpp  Batch.h  Primitive.cpp  Primitive.h  Renderer.cpp  Renderer.h
eggo/src/g_unit/player/: Player.cpp  Player.h
eggo/src/handlers/: File.cpp  File.h  Input.cpp  Input.h
eggo/src/macros/: build_macro.h
eggo/src/util/: Global.cpp  Global.h  Headers.h  Utils.cpp  Utils.h
eggo/src/util/namespaces/: MainWindow.h
eggo/src/window/: MainWindowSpecs.cpp  Window.cpp
